--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,8 @@ label{
 
 button{
     width: 155px;
-    font-size: 1.3rem;
+    height: 60px;
+    font-size: 1.5rem;
     margin-top: 10px;
     margin-bottom: 20px;
     border-radius: 10px;
