--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body{
-    background-color: rgb(43, 30, 231);
+    background-color: #023e8a;
     font-family: 'Tillana', cursive;
     overflow: hidden;
+    color: white;
 }
 
 main{
@@ -34,7 +35,9 @@ button{
     margin-bottom: 20px;
     border-radius: 10px;
     border: 1px black solid;
+    background-color: rgb(202, 199, 199);
     padding: 5px;
+    color: black;
 }
 
 #length{
@@ -60,4 +63,5 @@ button{
     border: none;
     border-radius: 10px;
     padding: 10px;
+    color: black;
 }
